Readme tweaks, using next-tick to smoothin things up

--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "url": "https://github.com/jljorgenson18/simplesmoothscroll/issues"
   },
   "homepage": "https://github.com/jljorgenson18/simplesmoothscroll#readme",
-  "dependencies": {}
+  "dependencies": {
+    "next-tick": "^0.2.2"
+  }
 }
