Getting rid of dependencies and not using next tick since raf makes it so we dont block the event queue

--- a/package.json
+++ b/package.json
@@ -22,7 +22,5 @@
     "url": "https://github.com/jljorgenson18/simplesmoothscroll/issues"
   },
   "homepage": "https://github.com/jljorgenson18/simplesmoothscroll#readme",
-  "dependencies": {
-    "next-tick": "^0.2.2"
-  }
+  "dependencies": {}
 }
