Adding a basic example for testing, Adding amd and window support

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "scroll",
     "smooth",
     "buttery",
-    "browser"
+    "browser",
+    "jank"
   ],
   "author": "Jesse Jorgenson",
   "license": "MIT",
