--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "karma-fixture": "^0.2.6",
     "karma-html2js-preprocessor": "^0.1.0",
     "karma-jasmine": "^0.3.8",
-    "karma-jasmine-html-reporter": "^0.2.0"
+    "karma-jasmine-html-reporter": "^0.2.0",
+    "karma-opera-launcher": "^0.3.0",
+    "karma-safari-launcher": "^0.1.1"
   }
 }
