--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 after_script:
-  - codeclimate-test-reporter < coverage/lcov/lcov.info
+  - ./node_modules/.bin/codeclimate-test-reporter < ./coverage/lcov/lcov.info
