--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/jljorgenson18/simplesmoothscroll#readme",
   "dependencies": {},
   "devDependencies": {
+    "codeclimate-test-reporter": "^0.3.1",
     "eslint": "^2.7.0",
     "jasmine": "^2.4.1",
     "karma": "^0.13.22",
