--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "karma start --single-run --browsers Firefox",
     "testAll": "karma start --single-run",
-    "lint": "eslint index.js testing/**"
+    "lint": "eslint index.js testing/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -27,18 +27,18 @@
   "homepage": "https://github.com/jljorgenson18/simplesmoothscroll#readme",
   "dependencies": {},
   "devDependencies": {
-    "chai": "^4.0.2",
-    "codeclimate-test-reporter": "^0.5.0",
-    "eslint": "^3.15.0",
-    "karma": "^1.4.1",
+    "chai": "^4.2.0",
+    "codeclimate-test-reporter": "^0.5.1",
+    "eslint": "^6.0.1",
+    "karma": "^4.1.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-firefox-launcher": "^1.0.0",
+    "karma-coverage": "^1.1.2",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-fixture": "^0.2.6",
     "karma-html2js-preprocessor": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
-    "mocha": "^3.4.2"
+    "mocha": "^6.1.4"
   }
 }
