--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
   - "12"
-addons:
-  firefox: "latest"
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 after_script:
   - ./node_modules/.bin/codeclimate-test-reporter < ./coverage/lcov/lcov.info
