--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ language: node_js
 node_js:
   - "12"
 dist: trusty
+# Sets up Firefox
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-after_script:
-  - ./node_modules/.bin/codeclimate-test-reporter < ./coverage/lcov/lcov.info
